--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@ header-img: "img/about-bg.jpg"
     <!--copied from markdown -->
     <blockquote><p>踏实做事，匠心品格。</p></blockquote>
 
-    <p>Hey，我们是<strong>JDOS</strong>(<strong>Jingdong Datacenter Operating System</strong>)团队。团队，自2013年于<strong>中国·南京</strong>组建，现隶属于<a href="http://www.jd.com">京东</a>云平台事业部。</p>
+    <p>Hey，我们是<strong>JDOS</strong>(<strong>Jingdong Datacenter Operating System</strong>)团队。团队，自2012年9月于<strong>中国·南京</strong>筹备组建，现隶属于<a href="http://www.jd.com">京东</a>商城研发部。</p>
 
     <p>目前，我们团队有近30人，于<strong>南京·江宁</strong>进行研发办公，自2014年负责京东的私有云研发，经历了2014年双十一的初尝试、2015年发展及2016年的大规模落地，目前运营有<strong>150K+</strong>的容器集群。</p>
 
